# scrollocal

./: CLAUDE.md  package.json  script.js  tailwind.config.js
src/: App.css  App.tsx  DependencyInjectionContext.tsx  FinalFileCell.tsx  Gallery.tsx  LocalFileCell.tsx  LocalFileControl.tsx  invokeUtil.ts  localFile.ts  localFile.tsx  main.tsx  streamingMediaSource.ts  tailwind.css  types.ts  useBoundingClientRef.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/http_server/: mod.rs
src-tauri/src/local_files/: mod.rs
src-tauri/src/scrolller/: mod.rs
src-tauri/src/streaming/: mod.rs
src-tauri/src/types/: mod.rs
src/api/: scrolller.ts
src/components/: Box.tsx  Card.tsx  Container.tsx  FilePicker.tsx  HeaderWithContent.tsx  RecordHotkeys.tsx  Section.tsx  Tabs.tsx  VideoFullsize.tsx  withDebounce.tsx
src/contexts/: ContextContext.tsx  FeedContext.tsx  FilterContext.tsx  FullscreenContext.tsx  HttpContext.tsx  ScrolllerContext.tsx  SettingsContext.tsx  TagContext.tsx  VideoElementContext.tsx
src/contexts/LocalFeedContext/: LocalFeed.ts  LocalFeedContext.tsx  localFiles.ts  types.ts
src/contexts/RemoteFeedContext/: RemoteFeed.ts  RemoteFeedContext.tsx  types.ts
src/feed/: Feed.ts  utils.ts
src/gallery/: FinalFileCell.tsx  Gallery.tsx  LocalFileCell.tsx
src/scroll/: Scroll.tsx  utils.ts
src/settings/: FeedControl.tsx  LocalFileControl.tsx  RemoteFeedControl.tsx  Settings.tsx  TagCreator.tsx
src/videoEditing/: Snips.tsx  VideoEditor.tsx  VideoOverview.tsx  canvasUtils.ts
