[package]
name = "local-browser"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22.1"
file-format = "0.25.0"
rand = "0.8.5"
ffprobe = "0.4.0"
jfs = "0.9.0"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
